# popsigner

./: .gitignore  LICENSE  Makefile  README.md  bao_client.go  bao_client_test.go  bao_keyring.go  bao_keyring_parallel_test.go  bao_keyring_test.go  bao_store.go  bao_store_test.go  errors.go  errors_test.go  go.mod  go.sum  types.go  types_test.go
.github/workflows/: release-infra.yml  release-manual.yml  release-popctl.yml  release-root.yml  release-sdk.yml
cmd/banhbao/: commands_test.go  keys.go  main.go  migrate.go
cmd/baokey/: main.go  root.go  root_test.go
control-plane/: Makefile  README.md  config.yaml  go.mod  go.sum  tailwind.config.js
control-plane/config/: config.example.yaml
control-plane/docker/: Dockerfile  Dockerfile.rpc-gateway  docker-compose.yml
doc/deployment/: SCALEWAY.md
doc/design/: DESIGN_SYSTEM.md  README.md
doc/implementation/: IMPL_00_SKELETON.md  (+52 more)
example/: main.go
migration/: doc.go  export.go  export_test.go  import.go  import_test.go  types.go
operator/: .gitignore  Dockerfile  Makefile  go.mod  go.sum  main.go
plugin/: Dockerfile  go.mod  go.sum
popctl/: .gitignore  Makefile  go.mod  go.sum  main.go
scripts/: docker-build-push.sh
sdk-go/: README.md  audit.go  celestia.go  errors.go  go.mod  go.sum  http.go  keys.go  orgs.go  popsigner.go  popsigner_test.go  sign.go  types.go
sdk-rust/: Cargo.toml  README.md
sdk-rust/examples/: basic.rs  parallel_workers.rs
sdk-rust/src/: audit.rs  client.rs  error.rs  keys.rs  lib.rs  orgs.rs  sign.rs  types.rs
sdk-rust/tests/: client_test.rs  keys_test.rs  sign_test.rs
(+436 files in other folders)
